--- a/app/src/main/res/layout/custom_playpage.xml
+++ b/app/src/main/res/layout/custom_playpage.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageButton
+            android:id="@+id/ib_play_return"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/bt_playpage_button_return_normal_new"
