--- a/app/src/main/res/layout/fragment_dynamic_item.xml
+++ b/app/src/main/res/layout/fragment_dynamic_item.xml
@@ -59,7 +59,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_dynamic_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
