--- a/app/src/main/res/layout/fragment_music_playlist_item.xml
+++ b/app/src/main/res/layout/fragment_music_playlist_item.xml
@@ -22,12 +22,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_songlist_listen"
-                android:background="@null"
                 android:id="@+id/iv_playList"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="17dp"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="4219"
                 android:layout_marginLeft="5dp"
@@ -40,7 +39,6 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/bt_play_nor"
                 android:background="@null"
-                android:layout_marginLeft="80dp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/ib_playList"/>
         </LinearLayout>
